# mir_vehicle_bmw

./: .gitignore  README.md  environment.yml
arduino_driver/i2c_master/: i2c_master.ino
arduino_driver/i2c_slave/: i2c_slave.ino
evaluation/: drift_evaluation.py
src/data_acquisition/: CMakeLists.txt  package.xml
src/data_acquisition/config/: parameters.yaml
src/data_acquisition/launch/: bringup.launch  data_acquisiton.launch
src/data_acquisition/scripts/: cam_lidar_acquistion.py  lidar_to_image.py  stacked_image_acquistion.py  weighted_model_run.py
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/scripts/: joy2vehicle.py
src/mir_bmw/: CMakeLists.txt  package.xml
src/mir_bmw/config/: parameters.yaml
src/mir_bmw/launch/: bringup.launch
src/mir_bmw_urdf/: CMakeLists.txt  package.xml
src/mir_bmw_urdf/launch/: mir-bmw.launch
src/mir_bmw_urdf/urdf/: mir_bmw.urdf
src/run_model/: CMakeLists.txt  package.xml
src/run_model/launch/: model_run.launch
src/run_model/scripts/: camera_model_run.py  config.py  drive_run.py  image_converter.py  image_process.py  lidar_model_run.py  net_model.py  stacked_model_run.py
train/: config.py  drive_data.py  drive_train.py  image_process.py  net_model.py  train.py
